Refactoring, added graph animation, edited style, formatted dates and amounts

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground">
@@ -11,99 +10,45 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cardview_light_background"
-        android:padding="10dp">
+        android:layout_margin="10dp"
+        android:background="@android:color/white">
 
         <TextView
-            android:id="@+id/transaction_id_label"
-            style="@style/CardViewLabelStyle"
+            android:id="@+id/transaction_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/id_label"
-            app:layout_constraintBottom_toTopOf="@id/transaction_description_label"
+            android:text="22 December 2018"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/secondaryText"
+            app:layout_constraintBottom_toTopOf="@+id/transaction_amount"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/transaction_id"
-            style="@style/CardViewTextStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="trx1"
-            app:layout_constraintBottom_toBottomOf="@id/transaction_id_label"
-            app:layout_constraintEnd_toStartOf="@+id/transaction_amount"
-            app:layout_constraintStart_toEndOf="@id/transaction_id_label"
-            app:layout_constraintTop_toTopOf="@+id/transaction_id_label" />
 
         <TextView
             android:id="@+id/transaction_amount"
             style="@style/CardViewTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:text="+22.30"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/transaction_description"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/transaction_description_label"
-            style="@style/CardViewLabelStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/description_label"
-            app:layout_constraintBottom_toTopOf="@id/transaction_other_account_label"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/transaction_date" />
 
         <TextView
             android:id="@+id/transaction_description"
-            style="@style/CardViewTextStyle"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:gravity="center"
             android:text="Pizza Alfredo's"
-            app:layout_constraintBottom_toBottomOf="@id/transaction_description_label"
-            app:layout_constraintEnd_toStartOf="@+id/transaction_amount"
-            app:layout_constraintStart_toEndOf="@id/transaction_description_label"
-            app:layout_constraintTop_toTopOf="@id/transaction_description_label" />
-
-        <TextView
-            android:id="@+id/transaction_other_account_label"
-            style="@style/CardViewLabelStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/other_account_label"
-            app:layout_constraintBottom_toTopOf="@id/transaction_date_label"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/transaction_other_account"
-            style="@style/CardViewTextStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="u98234n23jn4823"
-            app:layout_constraintBottom_toBottomOf="@id/transaction_other_account_label"
-            app:layout_constraintEnd_toEndOf="@+id/transaction_description"
-            app:layout_constraintStart_toEndOf="@id/transaction_other_account_label"
-            app:layout_constraintTop_toTopOf="@id/transaction_other_account_label" />
-
-        <TextView
-            android:id="@+id/transaction_date_label"
-            style="@style/CardViewLabelStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/date_label"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/transaction_date"
-            style="@style/CardViewTextStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="22 December 2018"
-            app:layout_constraintBottom_toBottomOf="@id/transaction_date_label"
-            app:layout_constraintEnd_toStartOf="@+id/transaction_amount"
-            app:layout_constraintStart_toEndOf="@id/transaction_date_label"
-            app:layout_constraintTop_toTopOf="@id/transaction_date_label" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/primaryText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/transaction_amount" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
