Added new query and date parameter to nav graph

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,6 +31,10 @@
             android:name="transactionId"
             app:argType="string" />
 
+        <argument
+            android:name="transactionDate"
+            app:argType="string" />
+
     </fragment>
 
 </navigation>
