Added balance before and after, temporary sorting by date (lexicographically = bad)

--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -17,13 +18,13 @@
             android:id="@+id/transaction_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="22 December 2018"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/secondaryText"
             app:layout_constraintBottom_toTopOf="@+id/transaction_amount"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="22 December 2018" />
 
         <TextView
             android:id="@+id/transaction_amount"
@@ -31,11 +32,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:text="+22.30"
             app:layout_constraintBottom_toTopOf="@id/transaction_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/transaction_date" />
+            app:layout_constraintTop_toBottomOf="@id/transaction_date"
+            tools:text="+22.30" />
 
         <TextView
             android:id="@+id/transaction_description"
@@ -43,12 +44,12 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:gravity="center"
-            android:text="Pizza Alfredo's"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/primaryText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/transaction_amount" />
+            app:layout_constraintTop_toBottomOf="@+id/transaction_amount"
+            tools:text="Pizza Alfredo's" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
