--- a/app/src/main/res/layout/fragment_transaction_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -20,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
-                android:text="€"
+                android:text="@string/euro_symbol"
                 android:textColor="@android:color/white"
                 android:textSize="40sp"
                 android:textStyle="normal" />
@@ -29,10 +30,10 @@
                 android:id="@+id/transaction_amount_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="20,00"
                 android:textColor="@android:color/white"
                 android:textSize="40sp"
-                android:textStyle="normal" />
+                android:textStyle="normal"
+                tools:text="20,00" />
 
         </LinearLayout>
 
@@ -40,9 +41,9 @@
             android:id="@+id/transaction_description_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="lorem ipsum"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            tools:text="lorem ipsum" />
 
     </LinearLayout>
 
@@ -55,7 +56,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ID"
+            android:text="@string/id_label"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/primaryText" />
 
@@ -63,9 +64,9 @@
             android:id="@+id/transaction_id_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="trx1"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/secondaryText" />
+            android:textColor="@color/secondaryText"
+            tools:text="trx1" />
 
     </LinearLayout>
 
@@ -78,7 +79,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Date"
+            android:text="@string/date_label"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/primaryText" />
 
@@ -86,9 +87,9 @@
             android:id="@+id/transaction_date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="27 Ago"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/secondaryText" />
+            android:textColor="@color/secondaryText"
+            tools:text="27 Ago" />
 
     </LinearLayout>
 
@@ -101,7 +102,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Other Account"
+            android:text="@string/other_account_label"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/primaryText" />
 
@@ -109,9 +110,9 @@
             android:id="@+id/transaction_other_account_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0938n91i8eu98ud"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/secondaryText" />
+            android:textColor="@color/secondaryText"
+            tools:text="0938n91i8eu98ud" />
 
     </LinearLayout>
 
@@ -124,7 +125,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Balance before"
+            android:text="@string/balance_before_label"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/primaryText" />
 
@@ -132,9 +133,9 @@
             android:id="@+id/balance_before_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="€ 166,00"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/secondaryText" />
+            android:textColor="@color/secondaryText"
+            tools:text="€ 166,00" />
 
     </LinearLayout>
 
@@ -147,7 +148,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Balance after"
+            android:text="@string/balance_after_label"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/primaryText" />
 
@@ -155,9 +156,9 @@
             android:id="@+id/balance_after_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="€ 220,22"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/secondaryText" />
+            android:textColor="@color/secondaryText"
+            tools:text="€ 186,00" />
 
     </LinearLayout>
 
