--- a/app/src/main/res/layout/fragment_transaction_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_detail.xml
@@ -10,6 +10,7 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/transaction_header_background"
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:background="@color/colorAccent"
@@ -22,6 +23,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/currency_symbol"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="15dp"
